<resources>
    <string name="app_name">违章管理</string>
    <string name="action_settings">Settings</string>
    <string name="action_1">全部</string>
    <string name="action_2">鲁菜</string>
    <string name="action_3">川菜</string>
    <string name="action_4">粤菜</string>
    <string name="action_5">淮扬菜</string>
    <string name="action_6">早餐</string>
    <string name="action_7">午餐</string>
    <string name="action_8">晚餐</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_idCard">请输入身份证号&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请再次输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>

    <string name="main_tab_recent">首页</string>
    <string name="main_tab_contact">上传</string>
    <string name="mian_tab_set">设置</string>

    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="agree">接受</string>
    <string name="new_friend">新朋友</string>

    <string name="chat">陌生人聊天</string>
    <string name="add_friend">添加好友</string>

    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="logout">退出登陆</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_info">UserInfoActivity</string>

    <string name="upload_name">请填写菜名</string>
    <string name="upload_step">请填写做菜步骤</string>
    <string name="upload_nutrient">请选择营养成分</string>
    <string name="upload_category1">请选择菜系</string>
    <string name="upload_category2">请选择种类</string>
    <string name="upload_image">请选择图片</string>
    <string name="upload_plan">请填写计划名</string>
    <string name="upload_breakfast">早餐餐品</string>
    <string name="upload_launch">午餐餐品</string>
    <string name="upload_dinner">晚餐餐品</string>
    <string name="upload">上传</string>

    <string name="upload_user">请填写姓名</string>
    <string name="upload_id">请填写身份证号</string>
    <string name="upload_tel">请填写电话号码</string>
    <string name="upload_plate">请填写车牌号</string>
    <string name="upload_img">请选择车牌照片</string>
    <string name="upload_type">请填写驾照类型</string>
    <string name="upload_score">请填写分数</string>
    <string name="upload_break_type">请填写违规类型</string>
    <string name="upload_break_place">请填写违规地点</string>
    <string name="upload_date">请选择时间</string>
    <string name="upload_fee">请填写费用</string>

</resources>
